refactor: 例外とtoStringの文字列リテラルを修正